--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SugarCube",
+  "name": "SugarCube (Customized)",
   "version": "2.36.1",
   "author": "Thomas Michael Edwards <thomasmedwards@gmail.com>",
   "description": "Dependency install configuration for SugarCube's Node.js-hosted build script, build.js.",
